# AI_GST_Fraud_Detection_OpenEnv

./: Dockerfile  README.md  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: BankAccount.csv  Business.csv  FileReturn.csv  GenerateInvoice.csv  HasAccount.csv  Invoice.csv  Payment.csv  ReceiveInvoice.csv  TaxReturn.csv  gst_anomaly_detection_dataset.csv
server/: app.py
tasks/: high_risk_business.yaml  low_risk_business.yaml  medium_risk_business.yaml
